--- a/MP-MMS.WPF/Resources/UIResources.xaml
+++ b/MP-MMS.WPF/Resources/UIResources.xaml
@@ -43,6 +43,7 @@
     <Style x:Key="ButtonTxtStyle" TargetType="TextBlock">
         <Setter Property="FontFamily" Value="{StaticResource DefaultFont}"/>
         <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontWeight" Value="ExtraLight"/>
         <Setter Property="Margin" Value="10 0 0 0"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
