--- a/MP-MMS.WPF/Views/MainWindow.xaml
+++ b/MP-MMS.WPF/Views/MainWindow.xaml
@@ -1,5 +1,4 @@
-﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -67,8 +66,7 @@
                         Grid.Row="2" 
                         Background="{StaticResource BrushPrimaryColour1}">
                 
-                <Button Style="{StaticResource ButtonStyle}"
-                        Click="Button_Click">
+                <Button Style="{StaticResource ButtonStyle}">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -85,8 +83,7 @@
 
                 </Button>
 
-                <Button Style="{StaticResource ButtonStyle}"
-                        Click="Button_Click">
+                <Button Style="{StaticResource ButtonStyle}">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -103,8 +100,7 @@
 
                 </Button>
 
-                <Button Style="{StaticResource ButtonStyle}"
-                        Click="Button_Click">
+                <Button Style="{StaticResource ButtonStyle}">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -120,8 +116,7 @@
                     </Grid>
                 </Button>
 
-                <Button Style="{StaticResource ButtonStyle}"
-                        Click="Button_Click">
+                <Button Style="{StaticResource ButtonStyle}">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -138,8 +133,7 @@
 
                 </Button>
 
-                <Button Style="{StaticResource ButtonStyle}"
-                        Click="Button_Click">
+                <Button Style="{StaticResource ButtonStyle}">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -157,6 +151,11 @@
                 </Button>
             </StackPanel>
         </Grid>
-        <syncfusion:CalendarEdit HorizontalAlignment="Left" Height="200" Margin="516,43,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200"/>
+
+        <Grid Grid.Row="2"
+              Margin="30">
+
+            <Frame x:Name="ContentFrame" NavigationUIVisibility="Hidden"/>
+        </Grid>
     </Grid>
 </Window>
