--- a/MP-MMS.WPF/Views/Pages/IssuesPage.xaml
+++ b/MP-MMS.WPF/Views/Pages/IssuesPage.xaml
@@ -3,12 +3,121 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:MP_MMS.WPF.Views.Pages"
+      xmlns:local="clr-namespace:MP_MMS.WPF.Views.Pages" xmlns:Syncfusion="clr-namespace:Syncfusion.Windows.Controls.Input;assembly=Syncfusion.SfInput.Wpf"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="700" d:DesignWidth="1000"
       Title="IssuesPage">
 
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Issues"
+                       FontSize="20"
+                       FontWeight="Bold"
+                       FontFamily="{StaticResource DefaultFont}"
+                       DockPanel.Dock="Left"
+                       Foreground="White"
+                       Grid.Column="0"/>
+            <Button DockPanel.Dock="Right" 
+                    Grid.Column="1"
+                    Width="20"
+                    HorizontalAlignment="Right"
+                    Background="Transparent"
+                    BorderBrush="Transparent">
+                <Image Source="/images/question.png" 
+                       Height="20"/>
+            </Button>
+        </Grid>
+
+        <Grid Grid.Row="1" Margin="2,20,-2,20">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Syncfusion:SfTextBoxExt Watermark="Search" 
+                                     Height="30"
+                                     Grid.Column="0"
+                                     FontSize="16"
+                                     VerticalAlignment="Center"/>
+
+            
+
+
+            <Button Grid.Column="2"
+                    Background="#3D8421"
+                    Width="205"
+                    BorderThickness="0"
+                    Margin="10 0 0 0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Image  Source="/Images/pagesicons/add.png"
+                                Grid.Column="0"
+                                Style="{StaticResource ButtonIconsStyle}"/>
+                    <TextBlock Text="Create Issue" 
+                               Grid.Column="1" 
+                               Style="{StaticResource ButtonTxtStyle}"
+                               Foreground="White"/>
+                </Grid>
+            </Button>
+        </Grid>
+
+        <ListView x:Name="partsListView" Grid.Row="2">
+            <ListView.View>
+                <GridView>
+                    <GridView.Columns>
+                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding FirstName}" Width="150"/>
+                        <GridViewColumn Header="Part" DisplayMemberBinding="{Binding FirstName}" Width="150"/>
+                        <GridViewColumn Header="Assigned To" DisplayMemberBinding="{Binding FirstName}" Width="150"/>
+                        <GridViewColumn Header="Priority" DisplayMemberBinding="{Binding LastName}" Width="150"/>
+                        <GridViewColumn Header="Due Date" DisplayMemberBinding="{Binding ManagerId}" Width="150"/>
+                        <GridViewColumn Header="Completed" Width="150">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <CheckBox/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn Header="Actions" Width="Auto">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Button Grid.Column="1"
+                                                Width="30"
+                                                Margin="5 0"
+                                                BorderThickness="0"
+                                                Background="#568CD9">
+                                            <Image  Source="/Images/pagesicons/edit.png"
+                                                    Style="{StaticResource ButtonIconsStyle}"/>
+                                        </Button>
+                                        <Button Grid.Column="1"
+                                                Width="30"
+                                                Margin="5 0"
+                                                BorderThickness="0"
+                                                Background="#F44336">
+                                            <Image  Source="/Images/pagesicons/delete.png"
+                                                    Style="{StaticResource ButtonIconsStyle}"/>
+                                        </Button>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView.Columns>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </Page>
