--- a/MP-MMS.WPF/Views/Windows/AddIssue.xaml
+++ b/MP-MMS.WPF/Views/Windows/AddIssue.xaml
@@ -3,10 +3,85 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MP_MMS.WPF.Views.Windows"
+        xmlns:local="clr-namespace:MP_MMS.WPF.Views.Windows" 
+        xmlns:Syncfusion="clr-namespace:Syncfusion.Windows.Tools.Controls;assembly=Syncfusion.Shared.WPF" 
+        xmlns:Syncfusion1="http://schemas.syncfusion.com/wpf" 
+        xmlns:Syncfusion2="clr-namespace:Syncfusion.Windows.Controls.Input;assembly=Syncfusion.SfInput.Wpf"
         mc:Ignorable="d"
-        Title="AddIssue" Height="450" Width="800">
-    <Grid>
-        
+        Title="Create New Issue" Height="350" Width="500">
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0">
+            <TextBlock Text="Create Issue"
+                       TextWrapping="Wrap"
+               FontSize="30"
+               FontWeight="Bold"
+               FontFamily="{StaticResource DefaultFont}"/>
+            <TextBlock Text="Write a name and other details"
+                       TextWrapping="Wrap"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="1" >
+            <Label Content="Name"/>
+            <Syncfusion1:SfTextBoxExt Watermark="Welding rod"
+                                     Margin="5 0"/>
+            <Label Content="Manufacturer"/>
+            <Syncfusion1:SfTextBoxExt Watermark="Polyteric Systems"
+                                     Margin="5 0"/>
+            <Label Content="Serial Number"/>
+            <Syncfusion1:SfTextBoxExt Watermark="00-00-123"
+                                     Margin="5 0"/>
+            <Label Content="Model Number"/>
+            <Syncfusion2:SfTextBoxExt Watermark="00-00-ABC"
+                                     Margin="5 0"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0"
+                             Margin="5 0">
+                    <Label Content="Category"/>
+                    <Syncfusion:ComboBoxAdv/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" 
+                            Margin="5 0">
+                    <Label Content="Location "/>
+                    <Syncfusion:ComboBoxAdv/>
+                </StackPanel>
+            </Grid>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0"
+                             Margin="5 0">
+                    <Label Content="Cost per Unit (₦)"/>
+                    <Syncfusion1:IntegerTextBox />
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" 
+                            Margin="5 0">
+                    <Label Content="Quantity "/>
+                    <Syncfusion1:IntegerTextBox />
+                </StackPanel>
+            </Grid>
+
+            <Syncfusion:ButtonAdv Margin="5 10"
+                                  Label="Add Part"
+                                  Foreground="White"
+                                  Background="#3D8421"
+                                  SmallIcon="/Images/pagesicons/add.png"/>
+
+        </StackPanel>
     </Grid>
 </Window>
