--- a/MP-MMS.WPF/Views/Windows/AddPart.xaml
+++ b/MP-MMS.WPF/Views/Windows/AddPart.xaml
@@ -1,12 +1,83 @@
-﻿<Window x:Class="MP_MMS.WPF.Views.Windows.AddPart"
+﻿<Window xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"  x:Class="MP_MMS.WPF.Views.Windows.AddPart"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MP_MMS.WPF.Views.Windows"
         mc:Ignorable="d"
-        Title="AddPart" Height="450" Width="800">
-    <Grid>
-        
+        Title="Add Part" Height="350" Width="500">
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0">
+            <Label Content="Add Part"
+               FontSize="30"
+               FontWeight="Bold"
+               FontFamily="{StaticResource DefaultFont}"/>
+            <TextBlock Text="Write a name and other details"
+                       TextWrapping="Wrap"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="1" >
+            <Label Content="Name"/>
+            <Syncfusion:SfTextBoxExt Watermark="Welding rod"
+                                     Margin="5 0"/>
+            <Label Content="Manufacturer"/>
+            <Syncfusion:SfTextBoxExt Watermark="Polyteric Systems"
+                                     Margin="5 0"/>
+            <Label Content="Serial Number"/>
+            <Syncfusion:SfTextBoxExt Watermark="00-00-123"
+                                     Margin="5 0"/>
+            <Label Content="Model Number"/>
+            <Syncfusion:SfTextBoxExt Watermark="00-00-ABC"
+                                     Margin="5 0"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0"
+                             Margin="5 0">
+                    <Label Content="Category"/>
+                    <Syncfusion:ComboBoxAdv/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" 
+                            Margin="5 0">
+                    <Label Content="Location "/>
+                    <Syncfusion:ComboBoxAdv/>
+                </StackPanel>
+            </Grid>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0"
+                             Margin="5 0">
+                    <Label Content="Cost per Unit (₦)"/>
+                    <Syncfusion:IntegerTextBox />
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" 
+                            Margin="5 0">
+                    <Label Content="Quantity "/>
+                    <Syncfusion:IntegerTextBox />
+                </StackPanel>
+            </Grid>
+
+            <Syncfusion:ButtonAdv Margin="5 10"
+                                  Label="Add Part"
+                                  Foreground="White"
+                                  Background="#3D8421"
+                                  SmallIcon="/Images/pagesicons/add.png"/>
+
+        </StackPanel>
     </Grid>
 </Window>
