--- a/MP-MMS.WPF/Views/Windows/AddUser.xaml
+++ b/MP-MMS.WPF/Views/Windows/AddUser.xaml
@@ -3,10 +3,45 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MP_MMS.WPF.Views.Windows"
+        xmlns:local="clr-namespace:MP_MMS.WPF.Views.Windows" xmlns:Syncfusion="clr-namespace:Syncfusion.Windows.Controls.Input;assembly=Syncfusion.SfInput.Wpf" xmlns:Syncfusion1="clr-namespace:Syncfusion.Windows.Tools.Controls;assembly=Syncfusion.Shared.WPF" xmlns:Syncfusion2="http://schemas.syncfusion.com/wpf"
         mc:Ignorable="d"
-        Title="AddUser" Height="450" Width="800">
-    <Grid>
-        
+        Title="Add New User" Height="260" Width="500"
+        ResizeMode="NoResize">
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0">
+            <Label Content="Add User"
+               FontSize="30"
+               FontWeight="Bold"
+               FontFamily="{StaticResource DefaultFont}"/>
+            <TextBlock Text="Write a name and other details for new user"
+                       TextWrapping="Wrap"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="1" >
+            <Label Content="First Name"/>
+            <Syncfusion:SfTextBoxExt Watermark="James"
+                                     Margin="5 0"/>
+            <Label Content="Last Name"/>
+            <Syncfusion:SfTextBoxExt Watermark="Bond"
+                                     Margin="5 0"/>
+            <Label Content="Role"/>
+            <Syncfusion:SfTextBoxExt Watermark="Mechanic"
+                                     Margin="5 0"/>
+            <Label Content="Email"/>
+            <Syncfusion:SfTextBoxExt Watermark="james007@outlook.com"
+                                     Margin="5 0"/>
+            
+            <Syncfusion1:ButtonAdv Margin="5 10"
+                                  Label="Add User"
+                                  Foreground="White"
+                                  Background="#3D8421"
+                                  SmallIcon="/Images/pagesicons/add.png"/>
+
+        </StackPanel>
     </Grid>
 </Window>
