--- a/MP-MMS.WPF/Views/Windows/UpdateIssue.xaml
+++ b/MP-MMS.WPF/Views/Windows/UpdateIssue.xaml
@@ -1,12 +1,90 @@
-﻿<Window x:Class="MP_MMS.WPF.Views.Windows.UpdateIssue"
+﻿<Window xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"  x:Class="MP_MMS.WPF.Views.Windows.UpdateIssue"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MP_MMS.WPF.Views.Windows"
+        xmlns:local="clr-namespace:MP_MMS.WPF.Views.Windows" 
         mc:Ignorable="d"
-        Title="UpdateIssue" Height="450" Width="800">
-    <Grid>
-        
+        Title="UpdateIssue" Height="370" Width="500"
+        ResizeMode="NoResize">
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0">
+            <TextBlock Text="Update Issue"
+                       TextWrapping="Wrap"
+               FontSize="30"
+               FontWeight="Bold"
+               FontFamily="{StaticResource DefaultFont}"/>
+            <TextBlock Text="Update issue details and status"
+                       TextWrapping="Wrap"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="1" >
+            <Label Content="Name"/>
+            <Syncfusion:SfTextBoxExt Watermark="Broken Welding rod"
+                                     Margin="5 0"/>
+            <Label Content="Description"/>
+            <Syncfusion:SfTextBoxExt Watermark="Fix destroyed joint..."
+                                     Margin="5 0"
+                                      Height="60"/>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0"
+                             Margin="5 0">
+                    <Label Content="Affected Part"/>
+                    <Syncfusion:ComboBoxAdv/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" 
+                            Margin="5 0">
+                    <Label Content="Assigned to"/>
+                    <Syncfusion:ComboBoxAdv Margin="5 0"/>
+                </StackPanel>
+            </Grid>
+
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0"
+                             Margin="5 0">
+                    <Label Content="Priority"/>
+                    <Syncfusion:ComboBoxAdv/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" 
+                            Margin="5 0">
+                    <Label Content="Due Date"/>
+                    <Syncfusion:SfDatePicker Margin="5 0"/>
+                </StackPanel>
+            </Grid>
+
+            <CheckBox Content="Completed" Margin="5 10"/>
+
+            <Syncfusion:ButtonAdv Margin="5 0"
+                                  Label="Update Issue"
+                                  Foreground="White"
+                                  Background="#4A88DA"
+                                  SmallIcon="/Images/pagesicons/edit.png"/>
+
+            <Syncfusion:ButtonAdv Margin="5 10"
+                                  Label="Delete Part"
+                                  Foreground="White"
+                                  Background="#F44336"
+                                  SmallIcon="/Images/pagesicons/delete.png"/>
+
+        </StackPanel>
     </Grid>
 </Window>
