--- a/MP-MMS.WPF/Views/Pages/PartsPage.xaml
+++ b/MP-MMS.WPF/Views/Pages/PartsPage.xaml
@@ -55,7 +55,8 @@
                     Margin="10 0"
                     BorderThickness="2"
                     BorderBrush="White"
-                    Background="Transparent">
+                    Background="Transparent"
+                    Click="ImportCSV_Click">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -77,7 +78,8 @@
             <Button Grid.Column="2"
                     Background="#3D8421"
                     Width="150"
-                    BorderThickness="0">
+                    BorderThickness="0"
+                    Click="AddPart_Click">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
