--- a/MP-MMS.WPF/Views/Windows/AddUser.xaml
+++ b/MP-MMS.WPF/Views/Windows/AddUser.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MP_MMS.WPF.Views.Windows" xmlns:Syncfusion="clr-namespace:Syncfusion.Windows.Controls.Input;assembly=Syncfusion.SfInput.Wpf" xmlns:Syncfusion1="clr-namespace:Syncfusion.Windows.Tools.Controls;assembly=Syncfusion.Shared.WPF" xmlns:Syncfusion2="http://schemas.syncfusion.com/wpf"
         mc:Ignorable="d"
-        Title="Add New User" Height="260" Width="500"
+        Title="Add New User" Height="290" Width="500"
         ResizeMode="NoResize">
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
@@ -25,22 +25,27 @@
         <StackPanel Grid.Column="1" >
             <Label Content="First Name"/>
             <Syncfusion:SfTextBoxExt Watermark="James"
-                                     Margin="5 0"/>
+                                     Margin="5 0"
+                                     x:Name="txtFirstName"/>
             <Label Content="Last Name"/>
             <Syncfusion:SfTextBoxExt Watermark="Bond"
-                                     Margin="5 0"/>
+                                     Margin="5 0"
+                                     x:Name="txtLastName"/>
             <Label Content="Role"/>
             <Syncfusion:SfTextBoxExt Watermark="Mechanic"
-                                     Margin="5 0"/>
+                                     Margin="5 0"
+                                     x:Name="txtRole"/>
             <Label Content="Email"/>
             <Syncfusion:SfTextBoxExt Watermark="james007@outlook.com"
-                                     Margin="5 0"/>
+                                     Margin="5 0"
+                                     x:Name="txtEmail"/>
             
             <Syncfusion1:ButtonAdv Margin="5 10"
                                   Label="Add User"
                                   Foreground="White"
                                   Background="#3D8421"
-                                  SmallIcon="/Images/pagesicons/add.png"/>
+                                  SmallIcon="/Images/pagesicons/add.png"
+                                   Click="AddUser_Click"/>
 
         </StackPanel>
     </Grid>
